Add function generateTodo()

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <section class="todos">
             <ul class="todos__list">
               <template id="todo-template">
+                <!-- Root element selector class="todo"-->
                 <li class="todo">
                   <label class="todo__label" for="">
                     <input class="todo__completed" id="" type="checkbox" />
